# ProjectDeploy

./: .gitignore  README.md  install.ps1  start.cmd
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Terminal.tsx
app/src/lib/: catalog.ts  graph.ts  types.ts
app/src/steps/: Step1Project.tsx  Step2Packages.tsx  Step3Templates.tsx
catalog/presets/: fastapi-api.json  laravel-full.json  nuxt-app.json
catalog/schema/: package.schema.json  plan.schema.json  template.schema.json
catalog/templates/: fastapi.json  laravel.json  nuxt.json
catalog/wsl/: defaults.json
cli/: Build-Plan.ps1  Execute-Plan.ps1  deploy.ps1
cli/lib/: Catalog.ps1  Graph.ps1  Wsl.ps1
config/: defaults.conf  wsl-template.wslconfig
linux/: bootstrap.sh  orchestrator.sh
linux/lib/: apache.sh  common.sh  database.sh  github.sh  permissions.sh  plan.sh  prompts.sh  python.sh  web.sh
linux/templates/: apache-vhost.conf.tpl  env.example.laravel  gitignore.python  gitignore.web  init-fastapi.sh  init-laravel.sh  init-nuxt.sh  wsl.conf.tpl
profiles/: python-fastapi.conf  web-laravel.conf  web-vanilla.conf
scripts/: publish-github.sh
windows/: Invoke-WslBootstrap.ps1  New-WslInstance.ps1  Set-WindowsHosts.ps1  Set-WslConfig.ps1  Setup-Environment.ps1
